22- fix: safari layout issue and backdrop-filter
Wrapped menu content in an inner div to handle padding separately and avoid initial size issue on Safari.
Also simplified glass effect style for Safari and Firefox duo to limited backdrop-filter support.

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -19,7 +19,7 @@
 }
 
 @media (max-width: 500px) {
-    .menu-wrapper{
+    .menu-wrapper {
         top: 1em;
     }
     .bot-section {
@@ -44,21 +44,41 @@
 }
 
 .menu-container {
-    position: relative;
-    right: 0px;
+    position: fixed;
+    right: 5%;
     bottom: 0px;
     left: auto;
-    top: -48px;
+    top: 2.4em;
     border-radius: 8px;
     height: 100%;
     color: white;
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     box-sizing: border-box;
-    padding: 10% 5% 8% 5%;
+
     transform-origin: right bottom;
+}
+
+.menu-sections {
+    padding: 9% 5% 10% 5%;
+    display: flex;
+    flex-direction: column;
+    gap: 3em;
+}
+
+@media (max-width: 500px) {
+    .menu-wrapper {
+        top: 1em;
+    }
+    .bot-section {
+        flex-direction: column !important;
+        gap: 32px;
+    }
+    .menu-container {
+        top: 1em;
+    }
 }
 
 .top-section {
