--- a/src/components/Overlay/Overlay.css
+++ b/src/components/Overlay/Overlay.css
@@ -4,8 +4,15 @@
     left: 0px;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(255, 255, 255, 0.15);
-    backdrop-filter: blur(2px) saturate(180%);
     z-index: 19;
     animation: fadeIn 0.3s ease-in-out;
+}
+
+.overlayer-glassBG {
+    background-color: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(2px) saturate(180%);
+}
+
+.overlayer-rgbaBG {
+    background-color: rgba(255, 255, 255, 0.85);
 }
